# Elsa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Elsa.xcodeproj/: project.pbxproj
Elsa.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/: elsa.hpp
include/elsa/: BaseState.hpp  Definitions.hpp  Result.hpp  Selector.hpp  State.hpp  Tuple.hpp  Utility.hpp
test/: test.cpp
